content/vault/v1.8.x/content/docs/secrets/key-management/azurekeyvault.mdx
---
layout: docs
page_title: Azure Key Vault - Key Management - Secrets Engines
description: Azure Key Vault is a supported KMS provider of the Key Management secrets engine.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:54:12-05:00
last_modified: 2025-07-25T12:27:39-07:00
# END AUTO GENERATED METADATA
---

# Azure Key Vault

The Key Management secrets engine supports lifecycle management of keys in named
[Azure Key Vault](https://docs.microsoft.com/en-us/azure/key-vault/) instances.
This is accomplished by configuring a KMS provider resource with the `azurekeyvault`
provider and other provider-specific parameter values.

The following sections describe how to properly configure the secrets engine to enable
the functionality.

## Authentication

The Key Management secrets engine must be configured with credentials that have sufficient
permissions to manage keys in an Azure Key Vault instance. The authentication parameters are
described in the [credentials](/vault/api-docs/secret/key-management/azurekeyvault#credentials) section
of the API documentation. The authentication parameters will be set with the following order
of precedence:

1. Environment variables
2. [KMS provider credentials](/vault/api-docs/secret/key-management/azurekeyvault#credentials)
3. [Managed Service Identity (MSI)](https://docs.microsoft.com/en-us/azure/active-directory/managed-service-identity/overview)

If the client ID or secret are not provided and Vault is running on an Azure VM, Vault will attempt
to use MSI to access Azure. Note that when MSI is used, the tenant ID must still be explicitly provided
by the configuration or environment variable.

An Azure Key Vault [access policy](https://docs.microsoft.com/en-us/azure/key-vault/general/assign-access-policy-portal)
determines whether a given service principal, namely an application or user group, can perform certain
operations on a Key Vault instance. The service principal associated with the provided credentials must
have an access policy on the Key Vault instance with the following minimum key permissions:

- `create`
- `delete`
- `get`
- `import`
- `update`

## Configuration

The following is an example of how to configure the KMS provider resource using the Vault CLI:

```text
$ vault write keymgmt/kms/example-kms \
    provider="azurekeyvault" \
    key_collection="keyvault-name" \
    credentials=client_id="a0454cd1-e28e-405e-bc50-7477fa8a00b7" \
    credentials=client_secret="eR%HizuCVEpAKgeaUEx" \
    credentials=tenant_id="cd4bf224-d114-4f96-9bbc-b8f45751c43f"
```

Refer to the Azure Key Vault [API documentation](/vault/api-docs/secret/key-management/azurekeyvault)
for a detailed description of individual configuration parameters.

## Key Transfer Specification

Keys are securely transferred from the secrets engine to Azure key vault instances in accordance
with the Azure [Bring Your Own Key](https://docs.microsoft.com/en-us/azure/key-vault/keys/byok-specification)
specification.
